fix: air, feat: add jwt
